Fixed arrows buttons, not centered anymore

--- a/src/app/project-modal/project-modal.component.css
+++ b/src/app/project-modal/project-modal.component.css
@@ -1,9 +1,10 @@
 .carousel-container {
     width: 100%;
-    height: 500px; /* Fixed height */
+    height: 100%; /* Fixed height */
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative; /* Make container a positioned element */
     overflow: hidden;
   }
   
@@ -11,7 +12,9 @@
     max-width: 100%;
     max-height: 100%;
     width: auto;
-    height: 480px;
+    height: 400px;
     object-fit: contain;
     object-position: center;
   }
+
+  
